# Real_estate_api

./: .env  README.md  api.db  auth.py  config.py  main.py  private.pem  public.pem  pyproject.toml
models/: models.py
resources/: customers.py  houses.py  token.py
